css/styles.css
.profile{
  margin: auto;
  text-align: center;
  width: 100%;
  margin-bottom: 10px;
  display: block;
}

.profile img{
  width: 100%;
  min-width: 200px;
  max-width: 400px;
  height: auto;
  /* float: left; */
  margin: auto;
  vertical-align: middle;
}

.box1{
  width: auto;
  border: solid black;
  border-width: 1px;
  margin: auto;
  padding: 10px;
  box-sizing: border-box;
  vertical-align: middle;
}

.about{
  text-align: left;
  vertical-align: middle;
}

.date{
  font-style: italic;
}

/*sticks footer of webpage at bottom of page*/
.footer{
  padding-top: 40px;
  margin-left: -15px;
  position: relative;
  bottom: 0%;
}

/*resizes footer photo, word wraps text to the right of photo */
.footer img{
  margin-top: 5px;
  margin-left: 15px;
  margin-right: 10px;
  width: 90px;
  height: 90px;
  float: left;
}

